[package]
name = "dune"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.29"
egui_render_three_d = "0.9.0"
egui_overlay = "0.9.0"
egui_window_glfw_passthrough = "0.9"
sysinfo = "0.36.1"
memflex = { version = "0.5", features = ["external"] }
once_cell = "1.21.3"
libc = "0.2.174"
offsetter = { version = "0.1.0", features = ["checked"] }
flame = "0.2.2"
flamer = "0.5.0"
ctrlc = "3.4.7"
