[package]
name = "dune"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.29"
egui_render_three_d = "0.9.0"
egui_overlay = "0.9.0"
egui_window_glfw_passthrough = "0.9"
sysinfo = "0.36.1"
memflex = { version = "0.5", features = ["external"] }
once_cell = "1.21.3"
libc = "0.2.174"
fastcontains = "1.0.1"
egui-keybind = "0.4.1"


[profile.release]
strip = true
panic = "abort"
